--- a/index.html
+++ b/index.html
@@ -4,46 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Superposition Principle</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+
     <header>
-        <h1>Welcome to Superposition Principle</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#game">Game</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <h1>Superposition Principle</h1>
     </header>
 
     <section id="about">
-        <h2>About Us</h2>
-        <p>We are a small team focused on developing engaging games and interactive experiences.</p>
-        <p>Our current project: <strong>Strike Sortie</strong> - a 2D roguelike game about World War II aviation.</p>
+        <div class="about-container">
+            <h2>About Us</h2>
+            <p>Welcome to Superposition Principle! We are a dedicated team of indie developers passionate about creating unique and engaging mobile video games. Our focus is on crafting high-quality, free games that offer rich experiences without being overloaded with ads.</p>
+            <p>At Superposition Principle, we believe in the power of creativity and innovation. Our games are designed to challenge, entertain, and immerse players in worlds full of excitement and discovery. From concept to final release, every step of our development process is driven by a commitment to excellence and a love for gaming.</p>
+            <p>We value our community and are excited to share our journey with you. Through our Patreon, you can gain exclusive access to behind-the-scenes content, early builds, and more. Your support helps us continue to push the boundaries of what mobile games can be.</p>
+            <p>Thank you for joining us on this adventure. We can’t wait for you to experience the games we’ve created and those yet to come!</p>
+        </div>
     </section>
 
-    <section id="game">
-        <h2>Our Game: Strike Sortie</h2>
-        <p>Learn more about the game, its features, and upcoming updates.</p>
-        <ul>
-            <li>Modular damage system</li>
-            <li>Plane upgrades and customization</li>
-            <li>Unique missions and more!</li>
-        </ul>
+    <section id="logo">
+        <img src="assets/sprites/Logo.png" alt="Superposition Principle Logo">
     </section>
 
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <p>If you have any questions, feel free to reach out to us:</p>
-        <ul>
-            <li>Email: <a href="mailto:superprinciple.contact@gmail.com">superprinciple.contact@gmail.com</a></li>
-        </ul>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 Superposition Principle. All rights reserved.</p>
-    </footer>
 </body>
 </html>
