--- a/index.html
+++ b/index.html
@@ -9,22 +9,20 @@
 <body>
 
     <header>
-        <h1>Superposition Principle</h1>
+        <div class="container">
+            <h1>Superposition Principle</h1>
+        </div>
     </header>
 
     <section id="about">
-        <div class="about-container">
-            <h2>About Us</h2>
-            <p>Welcome to Superposition Principle! We are a dedicated team of indie developers passionate about creating unique and engaging mobile video games. Our focus is on crafting high-quality, free games that offer rich experiences without being overloaded with ads.</p>
-            <p>At Superposition Principle, we believe in the power of creativity and innovation. Our games are designed to challenge, entertain, and immerse players in worlds full of excitement and discovery. From concept to final release, every step of our development process is driven by a commitment to excellence and a love for gaming.</p>
-            <p>We value our community and are excited to share our journey with you. Through our Patreon, you can gain exclusive access to behind-the-scenes content, early builds, and more. Your support helps us continue to push the boundaries of what mobile games can be.</p>
-            <p>Thank you for joining us on this adventure. We can’t wait for you to experience the games we’ve created and those yet to come!</p>
-        </div>
+        <h2>About Us</h2>
+        <p>Welcome to Superposition Principle! We are a team of indie developers passionate about creating unique and engaging mobile games. Our focus is on crafting high-quality, free games that offer rich experiences.</p>
+        <p>At Superposition Principle, we believe in the power of creativity and innovation. Our games are designed to challenge, entertain, and immerse players in exciting worlds. Every step of our development process is driven by a commitment to excellence and a love for gaming.</p>
+        <p>We value our community and are excited to share our journey with you. Thank you for joining us on this adventure. We can’t wait for you to experience the games we’ve created and those yet to come!</p>
     </section>
 
     <section id="logo">
         <img src="assets/sprites/Logo.png" alt="Superposition Principle Logo">
     </section>
-
 </body>
 </html>
