--- a/strike-sortie.html
+++ b/strike-sortie.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Superposition Principle</title>
+    <title>Strike Sortie</title>
     <link rel="icon" type="image/x-icon" href="assets/sprites/Ico.ico">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <!-- Меню -->
     <nav class="navbar">
@@ -20,21 +22,16 @@
         </div>
     </nav>
 
+    <!-- Контент страницы Strike Sortie -->
     <header>
         <div class="container">
-            <h1>Superposition Principle</h1>
+            <h1>Strike Sortie</h1>
         </div>
     </header>
 
     <section id="about">
-        <h2>About Us</h2>
-        <p>Welcome to Superposition Principle! We are a team of indie developers passionate about creating unique and engaging mobile games. Our focus is on crafting high-quality, free games that offer rich experiences.</p>
-        <p>At Superposition Principle, we believe in the power of creativity and innovation. Our games are designed to challenge, entertain, and immerse players in exciting worlds. Every step of our development process is driven by a commitment to excellence and a love for gaming.</p>
-        <p>We value our community and are excited to share our journey with you. Thank you for joining us on this adventure. We can’t wait for you to experience the games we’ve created and those yet to come!</p>
-    </section>
-
-    <section id="logo">
-        <img src="assets/sprites/Logo.png" alt="Superposition Principle Logo">
+        <h2>About Strike Sortie</h2>
+        <p>This is the page for our exciting game, Strike Sortie. Stay tuned for more updates!</p>
     </section>
     <footer>
         <div class="footer-content">
@@ -59,4 +56,5 @@
         </div>
     </footer>
 </body>
+
 </html>
