--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                 <a href="https://assetstore.unity.com/publishers/67934" target="_blank">
                     <img src="assets/sprites/UnityAssetStoreIco.png" alt="Unity Asset Store">
                 </a>
+                <a href="https://discord.gg/raKmQY2ZXn" target="_blank">
+                    <img src="assets/sprites/DiscordIco.png" alt="Discord">
+                </a>
             </div>
         </div>
     </footer>
