--- a/strike-sortie.html
+++ b/strike-sortie.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strike Sortie</title>
-    <link rel="icon" type="image/x-icon" href="assets/sprites/Ico.ico">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="assets/sprites/Ico.ico">
 </head>
 
 <body>
@@ -51,6 +51,9 @@
                 </a>
                 <a href="https://assetstore.unity.com/publishers/67934" target="_blank">
                     <img src="assets/sprites/UnityAssetStoreIco.png" alt="Unity Asset Store">
+                </a>
+                <a href="https://discord.gg/raKmQY2ZXn" target="_blank">
+                    <img src="assets/sprites/DiscordIco.png" alt="Discord">
                 </a>
             </div>
         </div>
