--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
             </div>
         </div>
     </footer>
+    <script type='text/javascript' src='//pl25933837.effectiveratecpm.com/f1/e9/6a/f1e96a0451055978c3b0f0df2f6f76c2.js'></script>
 </body>
 </html>
