--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
     <section id="logo">
         <img src="assets/sprites/Logo.png" alt="Superposition Principle Logo">
     </section>
+    <script type="text/javascript">
+        atOptions = {
+            'key' : '3eedaaadbd341cf1e69bbdb6c0f4fda0',
+            'format' : 'iframe',
+            'height' : 90,
+            'width' : 728,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/3eedaaadbd341cf1e69bbdb6c0f4fda0/invoke.js"></script>
     <footer>
         <div class="footer-content">
             <div class="footer-left">
@@ -61,6 +71,5 @@
             </div>
         </div>
     </footer>
-    <script type='text/javascript' src='//pl25933837.effectiveratecpm.com/f1/e9/6a/f1e96a0451055978c3b0f0df2f6f76c2.js'></script>
 </body>
 </html>
