--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Superposition Principle</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="assets/sprites/Ico.ico">
+    <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="296667"></script>
 </head>
 <body>
     <!-- Меню -->
@@ -62,6 +63,5 @@
             </div>
         </div>
     </footer>
-    <script type='text/javascript' src='//pl25933837.effectiveratecpm.com/f1/e9/6a/f1e96a0451055978c3b0f0df2f6f76c2.js'></script>
 </body>
 </html>
