--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p>At Superposition Principle, we believe in the power of creativity and innovation. Our games are designed to challenge, entertain, and immerse players in exciting worlds. Every step of our development process is driven by a commitment to excellence and a love for gaming.</p>
         <p>We value our community and are excited to share our journey with you. Thank you for joining us on this adventure. We can’t wait for you to experience the games we’ve created and those yet to come!</p>
     </section>
-
+    <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="296671"></script>
     <section id="logo">
         <img src="assets/sprites/Logo.png" alt="Superposition Principle Logo">
     </section>
