--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="296667"></script>
@@ -8,7 +9,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="assets/sprites/Ico.ico">
 </head>
+
 <body>
+    <div data-nat='6059404'></div>
     <!-- Меню -->
     <nav class="navbar">
         <div class="navbar-logo">
@@ -25,17 +28,21 @@
             <h1>Superposition Principle</h1>
         </div>
     </header>
-
     <section id="about">
         <h2>About Us</h2>
-        <p>Welcome to Superposition Principle! We are a team of indie developers passionate about creating unique and engaging mobile games. Our focus is on crafting high-quality, free games that offer rich experiences.</p>
-        <p>At Superposition Principle, we believe in the power of creativity and innovation. Our games are designed to challenge, entertain, and immerse players in exciting worlds. Every step of our development process is driven by a commitment to excellence and a love for gaming.</p>
-        <p>We value our community and are excited to share our journey with you. Thank you for joining us on this adventure. We can’t wait for you to experience the games we’ve created and those yet to come!</p>
+        <p>Welcome to Superposition Principle! We are a team of indie developers passionate about creating unique and
+            engaging mobile games. Our focus is on crafting high-quality, free games that offer rich experiences.</p>
+        <p>At Superposition Principle, we believe in the power of creativity and innovation. Our games are designed to
+            challenge, entertain, and immerse players in exciting worlds. Every step of our development process is
+            driven by a commitment to excellence and a love for gaming.</p>
+        <p>We value our community and are excited to share our journey with you. Thank you for joining us on this
+            adventure. We can’t wait for you to experience the games we’ve created and those yet to come!</p>
     </section>
     <section id="logo">
         <img src="assets/sprites/Logo.png" alt="Superposition Principle Logo">
     </section>
-    <script type="text/javascript" src="//www.highperformanceformat.com/3eedaaadbd341cf1e69bbdb6c0f4fda0/invoke.js"></script>
+    <script type="text/javascript"
+        src="//www.highperformanceformat.com/3eedaaadbd341cf1e69bbdb6c0f4fda0/invoke.js"></script>
     <footer>
         <div class="footer-content">
             <div class="footer-left">
@@ -62,4 +69,5 @@
         </div>
     </footer>
 </body>
+
 </html>
