--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <p>We value our community and are excited to share our journey with you. Thank you for joining us on this
             adventure. We can’t wait for you to experience the games we’ve created and those yet to come!</p>
     </section>
+    <video width="640" height="360" controls>
+        <source src="video.mp4" type="video/mp4">
+    </video>
     <section id="logo">
         <img src="assets/sprites/Logo.png" alt="Superposition Principle Logo">
     </section>
